//! Connection Commands
//!
//! Tauri commands for connection state management.
//! 
//! ## Responsibilities (ONLY):
//! - Session token management
//! - Connection state (connected/disconnected)
//! - Heartbeat
//! - Reconnection
//! 
//! ## NOT Responsible For:
//! - Device discovery (→ device module)
//! - Device identity (→ device module)
//! - Pairing flow (→ device module)
//!
//! ## Design:
//! - device = "WHO"
//! - connection = "Am I connected? Is it still alive?"

use serde::{Deserialize, Serialize};
use tauri::command;

use super::device::DeviceIdentity;

/// Connection state
#[derive(Debug, Clone, Serialize, Deserialize)]
#[serde(rename_all = "camelCase")]
pub struct ConnectionState {
    pub status: ConnectionStatus,
    pub device: Option<DeviceIdentity>,
    pub session_token: Option<String>,
    pub connected_at: Option<i64>,
    pub last_heartbeat: Option<i64>,
}

#[derive(Debug, Clone, Serialize, Deserialize)]
#[serde(rename_all = "lowercase")]
pub enum ConnectionStatus {
    Disconnected,
    Connecting,
    Connected,
    Reconnecting,
    Error,
}

/// Heartbeat result
#[derive(Debug, Clone, Serialize, Deserialize)]
#[serde(rename_all = "camelCase")]
pub struct HeartbeatResult {
    pub alive: bool,
    pub latency_ms: u64,
    pub server_time: i64,
}

// ============================================
// Connection State Commands
// ============================================

/// Get current connection state
#[command]
pub async fn get_connection_state() -> Result<ConnectionState, String> {
    // TODO: Return actual connection state from state management
    
    Ok(ConnectionState {
        status: ConnectionStatus::Disconnected,
        device: None,
        session_token: None,
        connected_at: None,
        last_heartbeat: None,
    })
}

/// Establish connection to a device using session token from pairing
#[command]
pub async fn connect(
    device: DeviceIdentity,
    session_token: String,
) -> Result<ConnectionState, String> {
    log::info!("Establishing connection to device: {}", device.name);
    
    // TODO:
    // 1. Store session token
    // 2. Verify connection with ping
    // 3. Start heartbeat
    // 4. Update connection state
    
    Err("Not implemented yet".to_string())
}

/// Disconnect from current device
#[command]
pub async fn disconnect() -> Result<(), String> {
    log::info!("Disconnecting from device...");
    
    // TODO:
    // 1. Stop heartbeat
    // 2. Clear session token
    // 3. Notify remote device
    // 4. Update connection state
    
    Ok(())
}

// ============================================
// Heartbeat Commands
// ============================================

/// Ping connected device
#[command]
pub async fn ping() -> Result<HeartbeatResult, String> {
    log::debug!("Pinging connected device...");
    
    // TODO:
    // 1. Send ping via gRPC
    // 2. Measure latency
    // 3. Update last_heartbeat
    
    Err("No device connected".to_string())
}

/// Start automatic heartbeat (called internally)
#[command]
pub async fn start_heartbeat() -> Result<(), String> {
    log::info!("Starting heartbeat...");
    
    // TODO:
    // 1. Start background task
    // 2. Ping every N seconds
    // 3. If fails, trigger reconnection
    
    Ok(())
}

/// Stop automatic heartbeat
#[command]
pub async fn stop_heartbeat() -> Result<(), String> {
    log::info!("Stopping heartbeat...");
    Ok(())
}

// ============================================
// Reconnection Commands  
// ============================================

/// Attempt to reconnect (after connection lost)
#[command]
pub async fn attempt_reconnect() -> Result<ConnectionState, String> {
    log::info!("Attempting to reconnect...");
    
    // TODO:
    // 1. Check if we have stored session token
    // 2. Try to reconnect
    // 3. If fails, clear token and notify UI
    
    Err("Not implemented yet".to_string())
}

/// Check if session token is still valid
#[command]
pub async fn validate_session() -> Result<bool, String> {
    log::debug!("Validating session token...");
    
    // TODO: Check with remote device if token is still valid
    
    Err("No session to validate".to_string())
}
